--- a/Notes/CSS Notes/styles.css
+++ b/Notes/CSS Notes/styles.css
@@ -76,7 +76,7 @@ If unread, italic font style, background yellow
 }
 
  */
- .Pitchers{
+ /* .Pitchers{
     color:red;
     background-color: white;
  }
@@ -102,7 +102,7 @@ If unread, italic font style, background yellow
     font-weight:400;
     text-align: center;
  }
- /*change how lists are viewed*/
+ /*change how lists are viewed
  ul{
     list-style: none;
  }
@@ -112,4 +112,21 @@ If unread, italic font style, background yellow
   }
   li:after{
     content:">"
-  }
+  } */
+.flex-container{
+    display: flex;
+    height: 300px;
+    padding: 16px;
+    border: 4px solid black;
+    background: blueviolet;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+.flex-container div{
+    background: palegreen;
+    border:  4px solid black;
+    width: 60px;
+    height: 60px;
+    
+}
